--- a/Notebooks/p5-HackaMol-SymmetryFun.ipynb
+++ b/Notebooks/p5-HackaMol-SymmetryFun.ipynb
@@ -51,12 +51,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "Undefined subroutine &main::V called at reply input line 14.\n",
+     "output_type": "error",
+     "traceback": [
+      "Undefined subroutine &main::V called at reply input line 14.\n"
+     ]
+    }
+   ],
    "source": [
     "my $symops = '\n",
     "REMARK 350 APPLY THE FOLLOWING TO CHAINS: A, B                                  \n",
@@ -69,7 +78,7 @@
     "'; # from the pdb\n",
     "\n",
     "my %sym_op = (); # a hash to store them!\n",
-    "foreach my $line ( grep {m/BIOMT/} split( '\\n' , $symops ) ){\n",
+    "foreach my $line ( grep {m/BIOMT|SMTRY/} split( '\\n' , $symops ) ){\n",
     "    my @entries = split(' ', $line);\n",
     "    push @{$sym_op{$entries[3]}}, V(@entries[4,5,6,7]);\n",
     "}\n",
@@ -149,7 +158,7 @@
    "file_extension": ".pl",
    "mimetype": "text/x-perl",
    "name": "perl",
-   "version": "5.22.1"
+   "version": "5.20.2"
   }
  },
  "nbformat": 4,
