improved description added Hg ball

--- a/Notebooks/p5-HackaMol-SymmetryFun-Capsid.ipynb
+++ b/Notebooks/p5-HackaMol-SymmetryFun-Capsid.ipynb
@@ -4,17 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Inflating the biological assembly using symmetry operators\n",
-    "A structure downloaded from the protein databank may not contain all the coordinates for the biological assembly.  This is often an issue for molecules that act as multimers.  In this notebook, we will pull a symmetry operation from the PDB, by hand, to generate the symmetry related coordinates. \n",
+    "## Visualizing a viral capsid\n",
+    "A viral capsid is the protein shell that contains all of its evil good stuff.  In this notebook we are going to use the 'asymmetric unit' to create the coordinates of the entire capsid. The first reasonable one I found was for Human Hepatitis B (pdbid: 1QGT)... sounds like fun to me! To do this, we will use the symmetry operators that are available in the pdb file. Actually, before reading the rest of this notebook, you should load up this page:\n",
     "\n",
-    "This will be implemented into HackaMol, to make easier.\n",
+    "http://www.rcsb.org/pdb/files/1QGT.pdb\n",
+    "\n",
+    "and see if you can find the information we will use.  \n",
     "\n",
     "#### Author: Demian "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -23,7 +25,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "HackaMol::Molecule=HASH(0x7fe9e75f0cb8)\n"
+      "HackaMol::Molecule=HASH(0x7fb1682f2080)\n"
+     ]
+    },
+    {
+     "ename": "Warning",
+     "evalue": "1QGT.pdb exists, set self->overwrite(1) to overwrite at /Users/demianriccardi/perl5/perlbrew/perls/perl-5.20.2t/lib/site_perl/5.20.2/HackaMol.pm line 26.\n",
+     "output_type": "error",
+     "traceback": [
+      "1QGT.pdb exists, set self->overwrite(1) to overwrite at /Users/demianriccardi/perl5/perlbrew/perls/perl-5.20.2t/lib/site_perl/5.20.2/HackaMol.pm line 26.\n"
      ]
     }
    ],
@@ -39,12 +49,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### slice out the matrices, and displacement vectors into a datastructure"
+    "### Copy and paste the BIOMT* matrices, and displacement vectors and then convert to a datastructure"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -244,19 +254,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Next, we transform each set of coordinates and store them!\n",
+    "For fun, let's create Hg atom at the center of mass for the asymmetric unit.  This will give us a very coarse representation of the molecule."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "my $hg = HackaMol::Atom->new(symbol => 'Hg', coords =>[$mol->COM] );\n",
+    "my $hg_ball = HackaMol::Molecule->new(name => 'Hg Ball') ;\n",
+    "\n",
     "foreach my $symop (keys %sym_op){\n",
     "    my @mat_d = @{$sym_op{$symop}};\n",
     "    my $cx = V(map{$_->[0]} @mat_d); \n",
     "    my $cy = V(map{$_->[1]} @mat_d);\n",
     "    my $cz = V(map{$_->[2]} @mat_d);\n",
     "    my $dxyz = V(map{$_->[3]} @mat_d);\n",
+    "# hg\n",
+    "    my $COM = $mol->COM; # center of mass\n",
+    "    my $COM_transform = $COM->[0]*$cx + $COM->[1]*$cy + $COM->[2]*$cz + $dxyz;\n",
+    "    $hg_ball->push_atoms( HackaMol::Atom->new(symbol => 'Hg', coords =>[$COM_transform]));\n",
+    "# the protein\n",
     "    foreach my $atom ($mol->all_atoms){\n",
     "        my ($x,$y,$z) = @{$atom->xyz};\n",
     "        my $xyz_new = $x*$cx + $y*$cy + $z*$cz + $dxyz;  \n",
@@ -267,7 +293,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "60\n",
+       "\n",
+       " Hg -53.317631 -49.268259 122.589530\n",
+       " Hg -98.058217 -18.723585 101.648244\n",
+       " Hg -19.602100  92.356711 -106.697385\n",
+       " Hg -86.527356 -88.442171  70.635241\n",
+       " Hg -58.239531 111.080296 -67.584577\n",
+       " Hg  85.573478  37.696440 -107.491890\n",
+       " Hg -19.958720 -73.383857 -120.477443\n",
+       " Hg -39.893949  43.088453 -129.808314\n",
+       " Hg  88.382394 111.739809   1.043724\n",
+       " Hg 102.410569  73.383857  66.522425\n",
+       " Hg  39.893949  43.088453 129.808314\n",
+       " Hg -36.495408 137.710430   1.505810\n",
+       " Hg -132.760837 -37.696506  35.382074\n",
+       " Hg -59.737913 -31.362568 -125.483551\n",
+       " Hg -54.271442 100.013924  85.733057\n",
+       " Hg -85.573478  37.696506 107.491890\n",
+       " Hg  86.527356 -88.442171 -70.635241\n",
+       " Hg  98.058217 -18.723651 -101.648171\n",
+       " Hg -15.413715 130.463460  55.136748\n",
+       " Hg  15.990734 -137.710430 -32.840257\n",
+       " Hg  19.602100  92.356711 106.697385\n",
+       " Hg -132.404115  18.723585  49.162065\n",
+       " Hg 134.828766  11.725885  44.520410\n",
+       " Hg -91.072463  31.362568 -104.978884\n",
+       " Hg  54.271442 100.013990 -85.733057\n",
+       " Hg  99.368648  88.442171 -51.011640\n",
+       " Hg -89.925831 -92.356711 -60.678780\n",
+       " Hg -15.990734 -137.710430  32.840257\n",
+       " Hg 102.980014 -43.088453  88.526002\n",
+       " Hg -100.290113 -100.013924  15.409224\n",
+       " Hg  19.958720 -73.383857 120.477443\n",
+       " Hg  56.696094 -130.463460   7.949419\n",
+       " Hg  91.072463  31.362568 104.978884\n",
+       " Hg -134.259219 -42.021289 -22.516900\n",
+       " Hg  33.116945  42.021289 -132.044831\n",
+       " Hg 133.682201  49.268259   0.220307\n",
+       " Hg -99.368648  88.442171  51.011640\n",
+       " Hg  53.317631 -49.268259 -122.589530\n",
+       " Hg -102.980014 -43.088453 -88.525935\n",
+       " Hg -38.615930 -111.080296 -80.425869\n",
+       " Hg  89.925897 -92.356711  60.678882\n",
+       " Hg  58.239531 111.080363  67.584577\n",
+       " Hg -133.682134  49.268259  -0.220409\n",
+       " Hg  36.495408 137.710430  -1.505810\n",
+       " Hg  59.737913 -31.362568 125.483551\n",
+       " Hg -134.828766  11.725885 -44.520410\n",
+       " Hg  34.427479 -111.739809 -81.408191\n",
+       " Hg -13.181819 -11.725885 141.375769\n",
+       " Hg 132.404115  18.723651 -49.162065\n",
+       " Hg  38.615930 -111.080296  80.425942\n",
+       " Hg -56.696094 -130.463460  -7.949419\n",
+       " Hg 132.760837 -37.696440 -35.382074\n",
+       " Hg -102.410569  73.383857 -66.522425\n",
+       " Hg  15.413715 130.463460 -55.136748\n",
+       " Hg 134.259219 -42.021289  22.516900\n",
+       " Hg -88.382460 111.739809  -1.043724\n",
+       " Hg -34.427479 -111.739809  81.408294\n",
+       " Hg  13.181819 -11.725885 -141.375769\n",
+       " Hg 100.290113 -100.013924 -15.409224\n",
+       " Hg -33.116945  42.021289 132.044831\n"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "$hg_ball->print_xyz; 1;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -337,7 +453,7 @@
        "1QGT_60.pdb\n"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -363,8 +479,17 @@
    "metadata": {},
    "source": [
     "#### You may now load those two with \n",
-    "$vmdpath/vmd -m 3RVY_1.pdb 3RVY_2.pdb"
+    "$vmdpath/vmd -m 1QGT_*.pdb"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
