strings into fh

--- a/Notebooks/p5-HackaMol-Vectors-Benzene.ipynb
+++ b/Notebooks/p5-HackaMol-Vectors-Benzene.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -74,7 +74,7 @@
        "  H   2.156660   1.245150   0.000000\n"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -87,16 +87,20 @@
     }
    ],
    "source": [
-    "my $benzene = HackaMol::Molecule-> new (name => 'benzene');\n",
-    "foreach my $line (split ('\\n', $sym_xyz)){\n",
-    "    my @sym_xyz = split(' ', $line);\n",
-    "    $benzene->push_atoms( \n",
-    "        HackaMol::Atom->new(\n",
-    "            symbol => $sym_xyz[0],\n",
-    "            coords => [V(@sym_xyz[1,2,3])],\n",
-    "        ),\n",
-    "    )\n",
-    "}\n",
+    "open my $xyz_fh,  \"<\", \\$sym_xyz;\n",
+    "\n",
+    "my $benzene = HackaMol::Molecule->new(atoms=> [HackaMol->new->read_xyz_atoms($xyz_fh)]);\n",
+    "\n",
+    "#my $benzene = HackaMol::Molecule-> new (name => 'benzene');\n",
+    "#foreach my $line (split ('\\n', $sym_xyz)){\n",
+    "#    my @sym_xyz = split(' ', $line);\n",
+    "#    $benzene->push_atoms( \n",
+    "#        HackaMol::Atom->new(\n",
+    "#            symbol => $sym_xyz[0],\n",
+    "#            coords => [V(@sym_xyz[1,2,3])],\n",
+    "#        ),\n",
+    "#    )\n",
+    "#}\n",
     "\n",
     "$benzene->print_xyz; 1;"
    ]
@@ -207,7 +211,7 @@
    "file_extension": ".pl",
    "mimetype": "text/x-perl",
    "name": "perl",
-   "version": "5.20.2"
+   "version": "5.22.1"
   }
  },
  "nbformat": 4,
