--- a/Notebooks/p5-HackaMol-Vectors-Benzene.ipynb
+++ b/Notebooks/p5-HackaMol-Vectors-Benzene.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Fun with vectors\n",
+    "In this notebook we will explore some mathematical properties of vectors.  We'll use the Cartesian coordinates of benzene to carry out the analysis."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -30,9 +40,8 @@
    "source": [
     "use Modern::Perl;\n",
     "use HackaMol;\n",
-    "use Math::Vector::Real;\n",
     "\n",
-    "my $sym_xyz =\n",
+    "my $c6h6_xyz =\n",
     "'  C        0.00000        1.40272        0.00000\n",
     "  H        0.00000        2.49029        0.00000\n",
     "  C       -1.21479        0.70136        0.00000\n",
@@ -49,63 +58,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "12\n",
-       "\n",
-       "  C   0.000000   1.402720   0.000000\n",
-       "  H   0.000000   2.490290   0.000000\n",
-       "  C  -1.214790   0.701360   0.000000\n",
-       "  H  -2.156660   1.245150   0.000000\n",
-       "  C  -1.214790  -0.701360   0.000000\n",
-       "  H  -2.156660  -1.245150   0.000000\n",
-       "  C   0.000000  -1.402720   0.000000\n",
-       "  H   0.000000  -2.490290   0.000000\n",
-       "  C   1.214790  -0.701360   0.000000\n",
-       "  H   2.156660  -1.245150   0.000000\n",
-       "  C   1.214790   0.701360   0.000000\n",
-       "  H   2.156660   1.245150   0.000000\n"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    }
-   ],
-   "source": [
-    "open my $xyz_fh,  \"<\", \\$sym_xyz;\n",
-    "\n",
-    "my $benzene = HackaMol::Molecule->new(atoms=> [HackaMol->new->read_xyz_atoms($xyz_fh)]);\n",
-    "\n",
-    "#my $benzene = HackaMol::Molecule-> new (name => 'benzene');\n",
-    "#foreach my $line (split ('\\n', $sym_xyz)){\n",
-    "#    my @sym_xyz = split(' ', $line);\n",
-    "#    $benzene->push_atoms( \n",
-    "#        HackaMol::Atom->new(\n",
-    "#            symbol => $sym_xyz[0],\n",
-    "#            coords => [V(@sym_xyz[1,2,3])],\n",
-    "#        ),\n",
-    "#    )\n",
-    "#}\n",
-    "\n",
-    "$benzene->print_xyz; 1;"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -114,12 +66,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "my $benzene = HackaMol->new->read_string_mol($c6h6_xyz, 'xyz');\n",
     "my $vec1 = $benzene->get_atoms(0)->xyz - $benzene->COM ;  # vector to COM\n",
     "my $vec2 = $benzene->get_atoms(2)->xyz - $benzene->COM ;  # vector to COM\n",
     "\n",
@@ -130,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -175,7 +128,7 @@
        " Hg   0.000000  -0.000000   5.000000\n"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -211,7 +164,7 @@
    "file_extension": ".pl",
    "mimetype": "text/x-perl",
    "name": "perl",
-   "version": "5.22.1"
+   "version": "5.20.2"
   }
  },
  "nbformat": 4,
