final update for lab

--- a/Notebooks/p5-HackaMol-Vectors-Benzene.ipynb
+++ b/Notebooks/p5-HackaMol-Vectors-Benzene.ipynb
@@ -9,6 +9,7 @@
    "outputs": [],
    "source": [
     "use Modern::Perl;\n",
+    "use HackaMol;\n",
     "use Math::Vector::Real;"
    ]
   },
@@ -18,78 +19,19 @@
     "collapsed": true
    },
    "source": [
-    "## Ability to work with vectors is prerequisite to carrying out structural analysis of biological molecules.\n",
+    "# This notebook builds directly from the p5-Vectors-Benzene notebook.  Please work through that notebook first.\n",
+    "\n",
+    "### Ability to work with vectors while maintaining a connection to the atomic metadata is prerequisite to carrying out structural analysis of biological molecules.\n",
     "At a given temperature, pressure, and molar constitution $G(T,P,n_1,n_2 ... )$, a biological molecule (or collection of molecules) has a space of available conformations or configurations that may be large ($S=k\\ln W$).  If you were to carry out a molecular dynamics simulation (which we will come back to later), you would most likely prepare your system using a single structure provided by X-ray crystallography or NMR spectroscopy, solvate your system in water (maybe with salt ions), and then add some heat so that it wiggles about.  \n",
     "\n",
     "#### Mental exercise: \n",
     "Before going an further.  Take look at the PDB file for a mutant of T4 Lysozyme [PDBID: 1L54](http://www.rcsb.org/pdb/files/1L54.pdb). Find the lines of coordinates that also contain additional meta data (what is this \"metadata\").  Load PDB 1l54 into VMD and imagine it wiggling about.  Imagine it unfolding.\n",
     "\n",
-    "### Lab exercise: Fun with coordinates and vectors\n",
-    "You can represent the structure of a biomolecule as a collection of atoms, each with it set of cartesian coordinates (x, y, and z).  In a PDB file, each atom has some extra information associated with it (e.g. the atom type, the residue to which it belongs, etc).  All this extra information is where the story telling comes in, all the rigorous analysis is in the handling of the coordinates, which can be treated as vectors.\n",
+    "### Lab exercise: Fun with benzene atoms and coordinates using vector analysis\n",
+    "We will use [HackaMol](https://metacpan.org/pod/HackaMol) to mix the metadata back into the mix as we work with the atomic coordinates (vectors).  HackaMol defines a set of classes to make working with atoms and molecules more intuitive and fun.  All HackaMol atom objects contain coordinates which are just Math::Vector::Real objects. Thus, all the analysis you carried out in the preview can be done with HackaMol, only now all the meta data will be retained. \n",
     "\n",
-    "In this notebook, you will work with the coordinates of benzene (C6H6) to learn how to carry out analysis with vectors. First, let's strip down all the information to represent benzene as a set of vectors (all in Angstroms):\n",
-    "         \n",
-    "     V(x,                y,               z)\n",
-    " 0.    V( 0.00000,        1.40272,        0.00000) \n",
-    " 1.    V(-1.21479,        0.70136,        0.00000)\n",
-    " 2.    V(-1.21479,       -0.70136,        0.00000)\n",
-    " 3.    V( 0.00000,       -1.40272,        0.00000)\n",
-    " 4.    V( 1.21479,       -0.70136,        0.00000)\n",
-    " 5.    V( 1.21479,        0.70136,        0.00000)\n",
-    " 6.    V( 0.00000,        2.49029,        0.00000)\n",
-    " 7.    V(-2.15666,        1.24515,        0.00000)\n",
-    " 8.    V(-2.15666,       -1.24515,        0.00000)\n",
-    " 9.    V( 0.00000,       -2.49029,        0.00000)\n",
-    " 10.   V( 2.15666,       -1.24515,        0.00000)\n",
-    " 11.   V( 2.15666,        1.24515,        0.00000)\n",
     "\n",
-    "That is, the coordinates of each atom is the x,y and z components of a vector extending from the origin (0,0,0) to the center of the atom.  Use the information above to answer these questions:\n",
-    "\n",
-    "    1. How is the ring oriented?\n",
-    "    2. Where is the center of the ring?\n",
-    "    3. Which vectors correspond to H atoms and which to C atoms?\n",
-    "    4. What is the origin for the coordinates?\n",
-    "    5. What would happen to the coordinates if you shifted the molecule from the origin in the Z direction by 10 angstroms?\n",
-    "    \n",
-    "Vectors are fun to work with. A vector has magnitude and direction. You should be able to answer the above questions using vector subtraction and addition, which we will review here. All of the above vectors can be written in a general form:\n",
-    "\n",
-    "$\\vec{R} =  R_x \\hat{x} + R_y \\hat{y} + R_z \\hat{z} $\n",
-    "\n",
-    "where the vector ($\\vec{R}$) is written using scaled unit vectors pointing along the axes of the system ($\\hat{x},\\hat{y}, \\hat{z}$). A unit vector has a magnitude of 1.0, and it labeled here with the ^ symbol.  For example, $\\hat{R}$ would be a unit vector pointing the same direction as $\\vec{R}$.  The three unit vectors ($\\hat{x},\\hat{y}, \\hat{z}$) provide the basis vectors of the system: any vector in this space can be represented by the addition of the scaled unit vectors! The scaling of the unit vectors is accomplished from the coefficients ($R_x, R_y, R_z$). Does this make sense?  Draw some two-dimensional vectors to convince yourself.\n",
-    "\n",
-    "Vector subtraction,\n",
-    "\n",
-    "$\\vec{R_1} - \\vec{R_2} =  (R_{x1} - R_{x2})\\hat{x} + (R_{y1} - R_{y2})\\hat{y} + (R_{z1}- R_{z2})\\hat{z} $\n",
-    "\n",
-    "and addition, \n",
-    "\n",
-    "$\\vec{R_1} + \\vec{R_2} =  (R_{x1} + R_{x2})\\hat{x} + (R_{y1} + R_{y2})\\hat{y} + (R_{z1} + R_{z2})\\hat{z} $\n",
-    "\n",
-    "is accomplished using the coefficients of the unit vectors.   Thus, the coordinates of benzene, repr\n",
-    "\n",
-    "o let's start with those using the vectors 0. and 1. from above,\n",
-    "\n",
-    "$\\vec{V}_0 =  0.00000 \\hat{x} + 1.40272\\hat{y} + 0.00000 \\hat{z} $\n",
-    "\n",
-    "$\\vec{V}_1 = -1.21479 \\hat{x} + 0.70136\\hat{y} + 0.00000 \\hat{z} $\n",
-    "\n",
-    "Subracting $V_1$ from $V_0$, we find:\n",
-    "\n",
-    "$\\vec{V}_{0,1} = 1.21479 \\hat{x} + 0.70136\\hat{y} + 0.00000 \\hat{z}$\n",
-    "\n",
-    "The vector $\\vec{V}_{0,1}$ is that which connects the two points.  This would correspond to the bond vector between the two atoms if they were bonded!  Can we determine if the two vectors are bonded?  Not really because we no longer have any atomic information.  However, we do know this corresponds to benzene so we can hypothesize what atoms these correspond to! In Benzene, carbons are around 1.4 angstroms apart, due to conjugation.  Single bonded carbons around around 1.5 angstroms apart.  A carbon-hydrogen bond is closer to 1 angstrom.  So the question becomes, how to determine the magnitude of $\\vec{V}_{0,1}$? The magnitude will give us the distance between the points.  The magnitude of a vector can be calculated from the square root of the dot product (also called scalar product) of the vector with itself:\n",
-    "\n",
-    "$\\vec{V}_{0,1}\\cdot \\vec{V}_{0,1} =  1.21479^2 + 0.70136^2 + 0^2$\n",
-    "\n",
-    "Verify that this is correct by expanding out the multiplication and using the fact that the basis vectors are othonormal:\n",
-    "\n",
-    "$\\hat{x}\\cdot \\hat{x} = 1 = \\hat{y}\\cdot \\hat{y} = \\hat{z}\\cdot \\hat{z}$\n",
-    "\n",
-    "$\\hat{x}\\cdot \\hat{y} = 0 = \\hat{x}\\cdot \\hat{z} = \\hat{y}\\cdot \\hat{z}$\n",
-    "\n",
-    "$\\sqrt{\\vec{V}_{0,1}\\cdot \\vec{V}_{0,1}} = 1.402$ angstroms.\n",
-    "\n",
-    "I think now you have all you need to determine all your H atoms and C atom vectors.  Let's do it with Perl using the [Math::Vector::Real] (https://metacpan.org/pod/Math::Vector::Real) library that is loaded above.  You can load the documentation by opening the Math::Vector::Real clicking the link!"
+    "You can represent the structure of a biomolecule as a collection of atoms, each with it set of cartesian coordinates "
    ]
   },
   {
