notebook with scripted solutions

--- a/Notebooks/p5-Vectors-Benzene.ipynb
+++ b/Notebooks/p5-Vectors-Benzene.ipynb
@@ -43,7 +43,7 @@
     " 10.   V( 2.15666,       -1.24515,        0.00000)\n",
     " 11.   V( 2.15666,        1.24515,        0.00000)\n",
     "\n",
-    "That is, the coordinates of each atom is the x,y and z components of a vector extending from the origin (0,0,0) to the center of the atom.  Use the information above to answer these questions:\n",
+    "That is, the coordinates of each atom are the x,y and z components of a vector extending from the origin (0,0,0) to the center of the atom.  Use the information above to answer these questions:\n",
     "\n",
     "    1. How is the ring oriented?\n",
     "    2. Where is the center of the ring?\n",
@@ -55,7 +55,7 @@
     "\n",
     "$\\vec{R} =  R_x \\hat{x} + R_y \\hat{y} + R_z \\hat{z} $\n",
     "\n",
-    "where the vector ($\\vec{R}$) is written using scaled unit vectors pointing along the axes of the system ($\\hat{x},\\hat{y}, \\hat{z}$). A unit vector has a magnitude of 1.0, and it labeled here with the ^ symbol.  For example, $\\hat{R}$ would be a unit vector pointing the same direction as $\\vec{R}$.  The three unit vectors ($\\hat{x},\\hat{y}, \\hat{z}$) provide the basis vectors of the system: any vector in this space can be represented by the addition of the scaled unit vectors! The scaling of the unit vectors is accomplished from the coefficients ($R_x, R_y, R_z$). Does this make sense?  Draw some two-dimensional vectors to convince yourself.\n",
+    "where the vector ($\\vec{R}$) is written using scaled unit vectors pointing along the axes of the coordinate system ($\\hat{x},\\hat{y}, \\hat{z}$). A unit vector has a magnitude of 1.0, and it labeled here with the ^ symbol.  For example, $\\hat{R}$ would be a unit vector pointing the same direction as $\\vec{R}$.  The three unit vectors ($\\hat{x},\\hat{y}, \\hat{z}$) provide the basis vectors of the system: any vector in this space can be represented by the addition of the scaled unit vectors! The scaling of the unit vectors is accomplished from the coefficients ($R_x, R_y, R_z$). Does this make sense?  Draw some two-dimensional vectors to convince yourself.\n",
     "\n",
     "Vector subtraction,\n",
     "\n",
