adjusting the notebooks for this weeks lab

--- a/Notebooks/p5-HackaMol-Vectors-Benzene-Metadata.ipynb
+++ b/Notebooks/p5-HackaMol-Vectors-Benzene-Metadata.ipynb
@@ -19,16 +19,25 @@
     "collapsed": true
    },
    "source": [
-    "# This notebook builds directly from the p5-Vectors-Benzene notebook.  Please work through that notebook first.\n",
+    "# Using HackaMol to work with atomic \"metadata\" and vectors for benzene.\n",
+    "This notebook builds directly from the [previous notebook](https://github.com/demianriccardi/EC-Chem452/blob/master/Notebooks/p5-Vectors-Benzene.ipynb) [p5-Vectors-Benzene notebook](). Please work with that notebook first.   \n",
     "\n",
     "### Ability to work with vectors while maintaining a connection to the atomic metadata is prerequisite to carrying out structural analysis of biological molecules.\n",
     "At a given temperature, pressure, and molar constitution $G(T,P,n_1,n_2 ... )$, a biological molecule (or collection of molecules) has a space of available conformations or configurations that may be large ($S=k\\ln W$).  If you were to carry out a molecular dynamics simulation (which we will come back to later), you would most likely prepare your system using a single structure provided by X-ray crystallography or NMR spectroscopy, solvate your system in water (maybe with salt ions), and then add some heat so that it wiggles about.  \n",
     "\n",
-    "#### Mental exercise: \n",
-    "Before going an further.  Take look at the PDB file for a mutant of T4 Lysozyme [PDBID: 1L54](http://www.rcsb.org/pdb/files/1L54.pdb). Find the lines of coordinates that also contain additional meta data (what is this \"metadata\").  Load PDB 1l54 into VMD and imagine it wiggling about.  Imagine it unfolding.\n",
+    "#### Lab exercise: Fun with benzene atoms and coordinates using vector analysis\n",
+    "I wrote the HackaMol library to make my computational life: easier, more fun, more sophisticated, and more reproducible.  HackaMol provides a molecular object system that packages atomic and molecular data into classes that have methods for interacting with the data.  In the previous exercise, we stripped benzene down to nothing but a a collection of 12 vectors.  Now we will add atomic information back to these vectors.  We'll call this information \"metadata\"; metadata is data that describes other data.  We can add such information to those 12 vectors to name atoms, add bonds, angles, dihedrals, all with names and information.   \n",
     "\n",
-    "### Lab exercise: Fun with benzene atoms and coordinates using vector analysis\n",
-    "We will use [HackaMol](https://metacpan.org/pod/HackaMol) to mix the metadata back into the mix as we work with the atomic coordinates (vectors).  HackaMol defines a set of classes to make working with atoms and molecules more intuitive and fun.  All HackaMol atom objects contain coordinates which are just Math::Vector::Real objects. Thus, all the analysis you carried out in the [previous notebook](https://github.com/demianriccardi/EC-Chem452/blob/master/Notebooks/p5-Vectors-Benzene.ipynb) can be done with HackaMol, only now all the meta data will be retained. \n",
+    "All HackaMol::Atom objects contain coordinates which are just Math::Vector::Real objects. Thus, all the analysis you carried out in the \n",
+    "\n",
+    "can be done with HackaMol, only now all the metadata will be retained. \n",
+    "\n",
+    "We will use [HackaMol](https://metacpan.org/pod/HackaMol) to mix the metadata back into the mix as we work with the atomic coordinates (vectors).  HackaMol defines a set of classes to make working with atoms and molecules more intuitive and fun.  \n",
+    "\n",
+    "#### Mental exercise: \n",
+    "Before going an further.  Again, take a look at the PDB file for a mutant of T4 Lysozyme [PDBID: 1L54](http://www.rcsb.org/pdb/files/1L54.pdb). Find the lines of coordinates that also contain additional metadata. What are all the different types of metadata that you can see in this file?\n",
+    "\n",
+    "\n",
     "\n",
     "This notebook is still a work in progress. "
    ]
