--- a/Notebooks/p5-HackaMol-Vectors-Benzene-Metadata.ipynb
+++ b/Notebooks/p5-HackaMol-Vectors-Benzene-Metadata.ipynb
@@ -20,7 +20,12 @@
    },
    "source": [
     "# Using HackaMol to work with atomic \"metadata\" and vectors for benzene.\n",
-    "This notebook builds directly from the [previous notebook](https://github.com/demianriccardi/EC-Chem452/blob/master/Notebooks/p5-Vectors-Benzene.ipynb) [p5-Vectors-Benzene notebook](). Please work with that notebook first.   \n",
+    "Suggested Prerequisites:\n",
+    "\n",
+    "1. This notebook builds directly from the [p5-Vectors-Benzene notebook](https://github.com/demianriccardi/EC-Chem452/blob/master/Notebooks/p5-Vectors-Benzene_2016_02_26.ipynb). \n",
+    "\n",
+    "2. This notebook uses the HackaMol library.  Please review the [Readme](https://github.com/demianriccardi/HackaMol) and the linked [HackaMol paper](https://www.researchgate.net/profile/Demian_Riccardi/publication/273778191_HackaMol_an_object-oriented_Modern_Perl_library_for_molecular_hacking_on_multiple_scales/links/550ebec60cf27526109e6ade.pdf) for additional information about the library.\n",
+    "\n",
     "\n",
     "### Ability to work with vectors while maintaining a connection to the atomic metadata is prerequisite to carrying out structural analysis of biological molecules.\n",
     "At a given temperature, pressure, and molar constitution $G(T,P,n_1,n_2 ... )$, a biological molecule (or collection of molecules) has a space of available conformations or configurations that may be large ($S=k\\ln W$).  If you were to carry out a molecular dynamics simulation (which we will come back to later), you would most likely prepare your system using a single structure provided by X-ray crystallography or NMR spectroscopy, solvate your system in water (maybe with salt ions), and then add some heat so that it wiggles about.  \n",
@@ -28,7 +33,7 @@
     "#### Lab exercise: Fun with benzene atoms and coordinates using vector analysis\n",
     "I wrote the HackaMol library to make my computational life: easier, more fun, more sophisticated, and more reproducible.  HackaMol provides a molecular object system that packages atomic and molecular data into classes that have methods for interacting with the data.  In the previous exercise, we stripped benzene down to nothing but a a collection of 12 vectors.  Now we will add atomic information back to these vectors.  We'll call this information \"metadata\"; metadata is data that describes other data.  We can add such information to those 12 vectors to name atoms, add bonds, angles, dihedrals, all with names and information.   \n",
     "\n",
-    "All HackaMol::Atom objects contain coordinates which are just Math::Vector::Real objects. Thus, all the analysis you carried out in the \n",
+    "In this lab we will use benzene to interact with the hierarchy HackaMol classes: HackaMol::Molecule, HackaMol::AtomGroup, HackaMol::Bond, HackaMol::Angle, HackaMol of  HackaMol::Atom objects contain coordinates which are just Math::Vector::Real objects. Thus, all the analysis you carried out in the \n",
     "\n",
     "can be done with HackaMol, only now all the metadata will be retained. \n",
     "\n",
