two benzenes for twice the fun!

--- a/Notebooks/p5-HackaMol-Vectors-Benzene-Metadata.ipynb
+++ b/Notebooks/p5-HackaMol-Vectors-Benzene-Metadata.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -19,7 +19,7 @@
     "collapsed": true
    },
    "source": [
-    "# Using HackaMol to work with atomic \"metadata\" and vectors for benzene.\n",
+    "# Benzene is more than 12 vectors: using HackaMol to work with atomic \"metadata\" and coordinates.\n",
     "Suggested Prerequisites:\n",
     "\n",
     "1. This notebook builds directly from the [p5-Vectors-Benzene notebook](https://github.com/demianriccardi/EC-Chem452/blob/master/Notebooks/p5-Vectors-Benzene_2016_02_26.ipynb). \n",
@@ -30,21 +30,15 @@
     "### Ability to work with vectors while maintaining a connection to the atomic metadata is prerequisite to carrying out structural analysis of biological molecules.\n",
     "At a given temperature, pressure, and molar constitution $G(T,P,n_1,n_2 ... )$, a biological molecule (or collection of molecules) has a space of available conformations or configurations that may be large ($S=k\\ln W$).  If you were to carry out a molecular dynamics simulation (which we will come back to later), you would most likely prepare your system using a single structure provided by X-ray crystallography or NMR spectroscopy, solvate your system in water (maybe with salt ions), and then add some heat so that it wiggles about.  \n",
     "\n",
+    "When simulated in a computer, a condensed phase system is just a vector space that varies with time (molecular dynamics) or conformation (monte carlo) that is restrained (or even constrained) by the information of how suppose that the vectors interact (e.g. this water hydrogen, with these coordinates, is bound to this water oxygen with these coordinates). While this may seem an obfuscated way to describe computational work with molecules, it is a valuable perspective.  The hierarchy of chemistry and biochemistry (atom, atoms, bonds, molecule, molecules, polymers, nonbonded interactions, etc.) provide the information that biases that which is possible in empirical computational work (i.e. classical mechanical molecular simulations). \n",
+    "\n",
     "#### Lab exercise: Fun with benzene atoms and coordinates using vector analysis\n",
-    "I wrote the HackaMol library to make my computational life: easier, more fun, more sophisticated, and more reproducible.  HackaMol provides a molecular object system that packages atomic and molecular data into classes that have methods for interacting with the data.  In the previous exercise, we stripped benzene down to nothing but a a collection of 12 vectors.  Now we will add atomic information back to these vectors.  We'll call this information \"metadata\"; metadata is data that describes other data.  We can add such information to those 12 vectors to name atoms, add bonds, angles, dihedrals, all with names and information.   \n",
+    "I wrote the HackaMol library to make my computational life easier, more fun, more sophisticated, and more reproducible.  HackaMol provides a molecular object system that packages atomic and molecular data into classes that have methods for interacting with the data.  In the previous exercise, we stripped benzene down to nothing but a a collection of 12 vectors.  Now we will add atomic information back to these vectors.  We'll call this information \"metadata\"; metadata is data that describes other data.  We can add such information to those 12 vectors to name atoms, add bonds, angles, and dihedrals all with names and information. We will do that here.   \n",
     "\n",
-    "In this lab we will use benzene to interact with the hierarchy HackaMol classes: HackaMol::Molecule, HackaMol::AtomGroup, HackaMol::Bond, HackaMol::Angle, HackaMol of  HackaMol::Atom objects contain coordinates which are just Math::Vector::Real objects. Thus, all the analysis you carried out in the \n",
-    "\n",
-    "can be done with HackaMol, only now all the metadata will be retained. \n",
-    "\n",
-    "We will use [HackaMol](https://metacpan.org/pod/HackaMol) to mix the metadata back into the mix as we work with the atomic coordinates (vectors).  HackaMol defines a set of classes to make working with atoms and molecules more intuitive and fun.  \n",
+    "In this lab we will use benzene to interact with the hierarchy [HackaMol](https://metacpan.org/pod/HackaMol) classes: HackaMol::Atom (https://metacpan.org/pod/HackaMol::Atom), [HackaMol::AtomGroup](https://metacpan.org/pod/HackaMol::AtomGroup), [HackaMol::Bond](https://metacpan.org/pod/HackaMol::Bond), [HackaMol::Angle](https://metacpan.org/pod/HackaMol::Angle), [HackaMol::Dihedral](https://metacpan.org/pod/HackaMol::Dihedral), and [HackaMol::Molecule](https://metacpan.org/pod/HackaMol::Molecule). The HackaMol::Atom objects contain coordinates which are just Math::Vector::Real objects;  the other classes listed above contain groups of HackaMol::Atom objects plus other things.  \n",
     "\n",
     "#### Mental exercise: \n",
-    "Before going an further.  Again, take a look at the PDB file for a mutant of T4 Lysozyme [PDBID: 1L54](http://www.rcsb.org/pdb/files/1L54.pdb). Find the lines of coordinates that also contain additional metadata. What are all the different types of metadata that you can see in this file?\n",
-    "\n",
-    "\n",
-    "\n",
-    "This notebook is still a work in progress. "
+    "Before going an further.  Again, take a look at the PDB file for a mutant of T4 Lysozyme [PDBID: 1L54](http://www.rcsb.org/pdb/files/1L54.pdb). Find the lines of coordinates that also contain additional metadata. What are all the different types of metadata that you can see in this file?\n"
    ]
   },
   {
@@ -56,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -79,7 +73,7 @@
        "  H        2.15666        1.24515        0.00000\n"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -116,26 +110,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### load the xyz file string into a HackaMol molecule object called benzene."
+    "### Load this xyz file string into two HackaMol::Molecule objects called bnz1 and bnz2:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "Benzene\n"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "HackaMol::Molecule=HASH(0x7fed8cba6258)\n"
+      "1\n"
      ]
     }
    ],
    "source": [
-    "my $benzene = HackaMol->new->read_string_mol($c6h6_xyz, 'xyz');"
+    "my $bnz1 = HackaMol->new->read_string_mol($c6h6_xyz, 'xyz');\n",
+    "my $bnz2 = HackaMol->new->read_string_mol($c6h6_xyz, 'xyz');\n",
+    "\n",
+    "$_->name(\"Benzene\") foreach ($bnz1,$bnz2); \n",
+    "\n",
+    "say $bnz2->name;"
    ]
   },
   {
