--- a/Notebooks/p5-HackaMol-Vectors-Benzene-Metadata_2016_03_04.ipynb
+++ b/Notebooks/p5-HackaMol-Vectors-Benzene-Metadata_2016_03_04.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "# Benzene is more than 12 vectors: using HackaMol to work with atomic \"metadata\" and coordinates.\n",
     "\n",
-    "<img src=\"fatstacks.jpg\">\n",
+    "<img src=\"figs/fatstacks.png\">\n",
     "\n",
     "Suggested Prerequisites:\n",
     "\n",
